--- a/posts/1.md
+++ b/posts/1.md
@@ -14,6 +14,6 @@ Some things that are surely to be posted are
 - Intermediate language's for R
 - etc... as life goes on
 
-![compiler meme](http://www.quickmeme.com/img/c2/c250d31362da05ec863482d37e10961b2c70dfc9a4e41f4c321dfa6eada330fa.jpg "Compiler needs to be compiled")
+![compiler meme](https://memegenerator.net/img/instances/76466967.jpg "Compiler needs to be compiled")
 
-*source - www.quickmeme.com*
+*source - www.memegenerator.com*
