--- a/posts/1.md
+++ b/posts/1.md
@@ -16,4 +16,4 @@ Some things that are surely to be posted are
 
 ![compiler meme](https://memegenerator.net/img/instances/76466967.jpg "Compiler needs to be compiled")
 
-*source - www.memegenerator.com*
+*source - www.quickmeme.com*
