--- a/posts/1.md
+++ b/posts/1.md
@@ -1,4 +1,8 @@
-# R's Compiler Lineage
+<!-- R Compiler Saga -->
+<!-- Compilers -->
+<!-- R Melts Brain Lineage -->
+<!-- This is the parent post for the R melts brain research paper. -->
+<!-- 02-09-2021 -->
 
 - No changes made to this post 
 
