--- a/posts/3.md
+++ b/posts/3.md
@@ -1,3 +1,9 @@
+<!-- How this blog was crudely put together in one weekend. -->
+<!-- React -->
+<!-- How this blog works -->
+<!-- I haven't used react in a long time, my code might look really stupid, but it works. hopefully this blog's design improves with time and you will get to learn a few things along the way. -->
+<!-- 02-09-2021 -->
+
 # No actions, only reactions
 
 - No changes made to this post 
